--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
               Generate Tiling
             </button>
           </div>
+          <div class="flex items-end gap-2">
+            <button id="btnExport" class="btn-primary inline-flex items-center gap-2 w-full justify-center">
+              Export SVG
+            </button>
+          </div>
         </div>
 
         <!-- Palette mode -->
